[507338] Java 9 support not well integrated with Tomcat webserver (/apache-tomcat-8.5.6/endorsed is not supported)
Change-Id: Ia9cbcc0a0511909eb8f56d470bb6755f00d4b8fc